<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="porfolio_1">Popular Movies</string>
    <string name="porfolio_2">Stock Hawk</string>
    <string name="porfolio_3">Build it Bigger</string>
    <string name="porfolio_4">Make Your App Material</string>
    <string name="porfolio_5">Go Ubiquitous</string>
    <string name="porfolio_6">Capstone</string>
</resources>
