<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="com.learn.heddy.myappportfolio.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        style="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porfolio_1"
            android:id="@+id/button1"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:onClick="sendMessage"
            style="@style/ButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porfolio_2"
            android:id="@+id/button2"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:onClick="sendMessage"
            style="@style/ButtonStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porfolio_3"
            android:id="@+id/button3"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:onClick="sendMessage"
            style="@style/ButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porfolio_4"
            android:id="@+id/button4"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:onClick="sendMessage"
            style="@style/ButtonStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porfolio_5"
            android:id="@+id/button5"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:onClick="sendMessage"
            style="@style/ButtonStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porfolio_6"
            android:id="@+id/button6"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:onClick="sendMessage"
            style="@style/ButtonStyle"/>
    </LinearLayout>
</LinearLayout>
